# mav_voxblox_planning

./: .clang-format  .gitignore  LICENSE  README.md
install/: install_https.rosinstall  install_ssh.rosinstall
loco/: CMakeLists.txt  package.xml
loco/include/loco/: loco.h
loco/include/loco/impl/: loco_impl.h
loco/src/: loco_main.cpp
loco_planner/: CMakeLists.txt  package.xml
loco_planner/include/loco_planner/: loco.h
loco_planner/include/loco_planner/impl/: loco_impl.h
loco_planner/src/: loco_main.cpp
loco_planner/test/: test_loco.cpp
mav_local_planner/: CMakeLists.txt  package.xml
mav_local_planner/include/mav_local_planner/: common.h  mav_local_planner.h  mav_local_planner_inl.h
mav_local_planner/launch/: firefly_just_planner.launch  firefly_mapping_planning.launch  firefly_sim.launch  jfr_experiments.launch
mav_local_planner/src/: mav_local_planner.cpp  mav_local_planner_node.cpp
mav_local_planner/worlds/: maze_house.world
mav_path_smoothing/: CMakeLists.txt  package.xml
mav_path_smoothing/include/mav_path_smoothing/: loco_smoother.h  path_smoother_base.h  polynomial_smoother.h  velocity_ramp_smoother.h
mav_path_smoothing/src/: loco_smoother.cpp  path_smoother_base.cpp  polynomial_smoother.cpp  velocity_ramp_smoother.cpp
mav_planning_benchmark/: CMakeLists.txt  package.xml
mav_planning_benchmark/include/mav_planning_benchmark/: global_planning_benchmark.h  local_planning_benchmark.h
mav_planning_benchmark/launch/: global_planning_benchmark.launch  local_planning_benchmark.launch
mav_planning_benchmark/scripts/: run_local_benchmark.sh
mav_planning_benchmark/src/: global_planning_benchmark.cpp  global_planning_benchmark_node.cpp  local_planning_benchmark.cpp  local_planning_benchmark_node.cpp  trajectory_recolor.cpp
mav_planning_common/: CMakeLists.txt  package.xml
mav_planning_common/include/mav_planning_common/: color_utils.h  path_utils.h  path_visualization.h  physical_constraints.h  semaphore.h  utils.h  visibility_resampling.h  yaw_policy.h
mav_planning_common/src/: color_utils.cpp  path_visualization.cpp  visibility_resampling.cpp  yaw_policy.cpp
mav_planning_rviz/: CMakeLists.txt  package.xml  plugin_description.xml
mav_planning_rviz/include/mav_planning_rviz/: edit_button.h  planning_interactive_markers.h  planning_panel.h  planning_panel_rviz.h  pose_widget.h
mav_planning_rviz/src/: edit_button.cpp  panel_standalone.cpp  planning_interactive_markers.cpp  planning_panel.cpp  planning_panel_rviz.cpp  pose_widget.cpp  standalone_test.cpp
mav_planning_voxblox/: CMakeLists.txt  package.xml
mav_planning_voxblox/include/mav_planning_voxblox/: map_interface.h  voxblox_planner.h
mav_planning_voxblox/src/: voxblox_planner.cpp
mav_voxblox_planning/: CMakeLists.txt  package.xml
rrt_planner_voxblox/: CMakeLists.txt  package.xml
rrt_planner_voxblox/include/rrt_planner_voxblox/: ompl_rrt_voxblox.h  rrt_planner_voxblox.h
rrt_planner_voxblox/include/rrt_planner_voxblox/ompl/: mav_setup.h  ompl_types.h  ompl_voxblox.h
rrt_planner_voxblox/launch/: rrt_saved_map.launch  voxblox_bag_test.launch  voxblox_listener.launch
rrt_planner_voxblox/params/: planner.rviz
rrt_planner_voxblox/src/: ompl_rrt_voxblox.cpp  rrt_planner_voxblox.cpp  rrt_planner_voxblox_node.cpp
skeleton_planner/: CMakeLists.txt  package.xml
skeleton_planner/launch/: skeleton_saved_map.launch
skeleton_planner/src/: path_shortening.cpp  skeleton_global_planner.cpp  skeleton_global_planner_node.cpp
voxblox_loco_planner/: CMakeLists.txt  package.xml
voxblox_loco_planner/include/voxblox_loco_planner/: goal_point_selector.h  shotgun_planner.h  voxblox_loco_planner.h
voxblox_loco_planner/src/: goal_point_selector.cpp  shotgun_planner.cpp  voxblox_loco_planner.cpp
voxblox_planning_common/: CMakeLists.txt  package.xml
voxblox_planning_common/include/voxblox_planning_common/: gain_evaluator.h  path_shortening.h
voxblox_planning_common/src/: gain_evaluator.cpp  path_shortening.cpp
voxblox_planning_msgs/: CMakeLists.txt  package.xml
voxblox_planning_msgs/srv/: SmootherNameService.srv  YawPolicyService.srv
voxblox_rrt_planner/: CMakeLists.txt  package.xml
voxblox_rrt_planner/include/voxblox_rrt_planner/: blox_ompl_rrt.h  ompl_rrt.h  ompl_rrt_cblox.h  ompl_rrt_voxblox.h  parent_rrt_planner.h  rrt_planner.h  rrt_planner_voxblox.h  voxblox_ompl_rrt.h  voxblox_rrt_planner.h
voxblox_rrt_planner/include/voxblox_rrt_planner/ompl/: mav_setup.h  mav_setup_voxblox.h  ompl_cblox.h  ompl_types.h  ompl_voxblox.h
voxblox_rrt_planner/launch/: firefly_rrt.launch  rrt_saved_map.launch
voxblox_rrt_planner/params/: planner.rviz
voxblox_rrt_planner/src/: blox_ompl_rrt.cpp  ompl_rrt.cpp  ompl_rrt_voxblox.cpp  parent_rrt_planner.cpp  rrt_planner.cpp  rrt_planner_voxblox.cpp  voxblox_ompl_rrt.cpp  voxblox_rrt_planner.cpp  voxblox_rrt_planner_node.cpp
voxblox_skeleton/: CMakeLists.txt
voxblox_skeleton/include/voxblox_skeleton/: boost_graph.h  nanoflann_interface.h  skeleton.h  skeleton_generator.h  skeleton_planner.h  skeleton_voxel.h  sparse_graph.h  sparse_graph_planner.h  voxel_template_matcher.h
voxblox_skeleton/include/voxblox_skeleton/io/: skeleton_io.h
voxblox_skeleton/include/voxblox_skeleton/ros/: skeleton_vis.h
voxblox_skeleton/launch/: skeleton_eval.launch  skeletonize_map.launch
voxblox_skeleton/proto/voxblox_skeleton/: skeleton.proto
voxblox_skeleton/src/: boost_graph.cpp  skeleton.cpp  skeleton_eval.cpp  skeleton_generator.cpp  skeleton_planner.cpp  skeleton_serialization.cpp  skeletonizer.cpp  sparse_graph.cpp  sparse_graph_planner.cpp  voxel_template_matcher.cpp
voxblox_skeleton/src/io/: skeleton_io.cpp
voxblox_skeleton_planner/: CMakeLists.txt  package.xml
voxblox_skeleton_planner/include/voxblox_skeleton_planner/: path_shortening.h  skeleton_global_planner.h  skeleton_graph_planner.h
voxblox_skeleton_planner/launch/: skeleton_saved_map.launch
voxblox_skeleton_planner/src/: path_shortening.cpp  skeleton_global_planner.cpp  skeleton_global_planner_node.cpp  skeleton_graph_planner.cpp
(+2 files in other folders)
