<?xml version="1.0"?>
<package format="2">
  <name>loco_planner</name>
  <version>0.0.0</version>
  <description>
    LOcal Continuous Optimization (LOCO!) for polynomial spline paths for MAV planning. This library takes an arbitrary distance and gradient function and pushes trajectories out of collision.
  </description>

  <maintainer email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>ceres_catkin</depend>
  <depend>eigen_checks</depend>
  <depend>glog_catkin</depend>
  <depend>mav_msgs</depend>
  <depend>mav_trajectory_generation</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
</package>
