<?xml version="1.0"?>
<package format="2">
  <name>mav_planning_common</name>
  <version>0.0.0</version>
  <description>
    Common planning utilities.
  </description>

  <author email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</author>

  <maintainer email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>mav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>mav_trajectory_generation</depend>
  <depend>roscpp</depend>
</package>
