<?xml version="1.0"?>
<package format="2">
  <name>mav_planning_voxblox</name>
  <version>0.0.0</version>
  <description>
    Common planning utilities.
  </description>

  <author email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</author>

  <maintainer email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>voxblox</depend>
  <depend>voxblox_ros</depend>
</package>
